src/styles/style.css
/** CSS STYLE **/
:root {
  --white: #fff;
  --whity: #d7ccc0;
  --light: #f5f4f0;
  --main: #fe8a02;
  --main-dark: #42413c;
  --dark: #2a2626;
  --dark-translucent: #908d8b;
  --dark-bootstrap: #212529;

  --brown: #b09a81;
  --blue: #1085c5;
}

@font-face {
  font-weight: 400; /* Соответствует значению normal */
  font-family: "Neucha";
  src: url("../assets/fonts/Neucha-Regular.ttf");
}

@font-face {
  font-weight: 400; /* Соответствует значению normal */
  font-family: "OpenSans";
  src: url("../assets/fonts/OpenSans-Regular.ttf");
}

@font-face {
  font-weight: 700; /* Соответствует значению bold */
  font-family: "OpenSans";
  src: url("../assets/fonts/OpenSans-Bold.ttf");
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;

  font-size: 16px;
  font-family: "OpenSans", sans-serif;
  line-height: 1.6em;
}

h1,
h2,
h3 {
  font-family: Neucha, sans-serif;
  font-weight: 400;
  font-style: normal;
  line-height: 1.2em;
}

h1 {
  font-size: 72px;
}

h2 {
  font-size: 60px;
}

h3 {
  font-size: 34px;
}

h4 {
  font-size: 14px;
  line-height: 1.2;
}

section {
  position: relative;

  margin: 0 auto;
  padding: 100px;
  overflow: hidden;
}

header {
  position: relative;

  height: 914px;
  margin: 0 auto;
  padding: 100px;
  overflow: hidden;
}

header::before {
  position: absolute;
  top: 0;
  right: 0;

  display: block;

  width: 100%;
  height: 100%;

  background-image: url(../assets/images/background.png);
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 0.1;

  content: "";
}

.title {
  position: relative;
  z-index: 1000;
}

section.background::before {
  position: absolute;
  top: 0;
  right: 0;

  display: block;

  width: 100%;
  height: 100%;

  background-image: url(../assets/images/background.png);
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 10%;

  content: "";
}

.section-content {
  position: relative;

  width: 1110px;
  margin: 0 auto;
}

.main-image {
  position: absolute;
  top: -45px;
  right: -270px;

  height: 525px;
}

.section-text {
  column-count: 2;
  column-gap: 30px;
}

.video {
  z-index: 33000;

  margin-top: 30px;

  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

/* SECTION IKEA EFFECT */

.title-content {
  margin: 100px 0 20px;
  padding: 5px 10px;
}

.description h4 {
  font-weight: 400;
  font-size: 24px;
  font-family: Neucha, sans-serif;
}

.description h3 {
  margin-top: 30px;

  font-weight: 400;
}

/* SECTION Premature-optimization */

section#premature-optimization .section-content .description > * {
  color: var(--white);
}

.right-100 {
  right: 100px;
}

.title-flex {
  display: flex;
}

/* FOOTER */

footer {
  padding: 100px;
}

label {
  display: block;
  margin-bottom: 9px;

  font-size: 18px;
  line-height: 1.6;
}

input {
  width: 423px;
  height: 50px;

  margin-right: -5px;
  padding: 15px;
  border-radius: 0;
}

.agreement {
  font-size: 12px;
}

.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.btn-send {
  width: 70px;
  height: 50px;

  background-color: var(--main);
}

.input-block {
  position: relative;

  display: flex;
}

.btn-send::before {
  position: absolute;
  top: 15px;
  right: 25px;

  display: block;

  content: url("../assets/images/send.svg");
}

.contacts {
  margin-top: 60px;

  font-size: 14px;
  text-align: center;
}

/* Flex */
.display-flex {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: center;

  margin: -10px -15px;
}

.flex-container {
  width: 350px;

  margin: 10px 15px;
  padding: 24px;

  background-color: var(--white);
}

.flex-container:first-child {
  padding: 0;

  background-color: var(--main-dark);
}

.flex-container:first-child h2 {
  font-size: 52px;
}

.flex-container h3 {
  margin-top: 40px;

  color: var(--main);
}

.flex-container p {
  margin-top: 12px;
}

/* Utility classes */
.lh-1-1 {
  line-height: 1.1;
}

.overlay {
  z-index: 3000;

  margin-bottom: -100px;
  padding-bottom: 0;
}

.d-block {
  display: block;
}

.font-12 {
  font-size: 12px;
}

.color-dark {
  background-color: var(--main-dark);
}

.color-white {
  background-color: var(--white);
}

.color-light {
  background-color: var(--light);
}

.color-brown {
  background-color: var(--brown);
}

.text-dark {
  color: var(--dark);
}

.text-dark-bootstrap {
  color: var(--dark-bootstrap);
}

.text-main {
  color: var(--main);
}

.text-white {
  color: var(--white);
}

.text-brown {
  color: var(--brown);
}

.text-translucent {
  color: var(--dark-translucent);
}

.text-center {
  text-align: center;
}

.text-uppercase {
  text-transform: uppercase;
}

.break {
  break-inside: avoid;
}

.btn {
  padding: 12px 24px;
}

.btn-main {
  position: relative;
  top: 39px;
  left: 570px;

  display: block;

  color: var(--white);
  font-weight: bold;

  border: none;
  background: var(--main);
}

.btn-main:hover {
  background-color: #ea7600;
}

.pt-100 {
  padding-top: 100px;
}

.my-55 {
  margin: 55px;
}

.mt-194 {
  margin-top: 200px;
}

.mt-76 {
  margin-top: 76px;
}

.mt-16 {
  margin-top: 16px;
}

.ml-45 {
  margin-left: 45px;
}

.mr-30 {
  margin-right: 30px;
}

.mr-55 {
  margin-right: 55px;
}

.card {
  background-color: var(--light);
}

.card:hover {
  background-color: var(--main);
}

.card:hover h2,
.card:hover h3,
.card:hover p {
  color: var(--white);
}

.card-image {
  vertical-align: middle;
}

.w-578 {
  width: 578px;
}

.nolink {
  color: var(--main-dark);
  text-decoration: none;
}

